[tool.poetry]
name = "cursos"
version = "0.1.0"
description = "This package is for generate cursos"
authors = ["wfpinedar <wfpinedar@gmail.com>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.15"
openai = "^1.60.1"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.15"
mkdocs = "^1.6.1"
mkdocs-dracula-theme = "^1.0.7"
mkdocs-material = "^9.5.50"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
